Fri Mar 22 11:13:30 2002  Owen Taylor  <otaylor@redhat.com>

	* test/test-async.c (main): Fix includes and 
	g_type_init (0) [ g_type_init() hasn't taken
	arguments for a long time. ]

2002-03-22  jacob berkman  <jacob@ximian.com>

	* modules/extfs/Makefile.am (extfsdir): 
	* modules/extfs-method.c (EXTFS_COMMAND_DIR): move into a 2.0
	subdirectory for parallel install

2002-03-14  Seth Nickell  <snickell@stanford.edu>

	* HACKING:
	* configure.in:

	Build sherrif commits, bump version number to deal with
	tarball that built wrong.

2002-03-11  James Henstridge  <james@daa.com.au>

	* configure.in: shell doesn't need semicolons to terminate
	statements.  In fact it can be harmful if an m4 expansion leaves a
	semicolon on a line alone, as that is a syntax error.

2002-03-09  Darin Adler  <darin@bentspoon.com>

	* test/.cvsignore: Ignore test-performance.

2002-03-08  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Release 1.9.9

2002-03-08  Seth Nickell  <snickell@stanford.edu>

	* modules/applications.vfolder-info.in:

	Update applications vfolder for capplet movement too.
	
2002-03-05  jacob berkman  <jacob@ximian.com>

	* modules/preferences.vfolder-info.in: the capplets apparently
	moved

2002-02-25  Laszlo Peter  <laca@ireland.sun.com>

	* modules/file-method.c: (do_read_directory): work around a Solaris
	bug where readdir64_r returns -1 instead of 0 at EOF.

2002-02-25  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: REALLY Added ms (Malay) at ALL_LINGUAS.

2002-02-25  Seth Nickell  <snickell@stanford.edu>

	* NEWS:
	* configure.in:

	Release 1.9.8
	
2002-02-23  Andy Hertzfeld  <andy@differnet.com>

	* modules/nntp-method.c: (do_basic_command), (get_auth_info),
	(get_files_from_newsgroup), (add_file_to_folder),
	(do_get_file_info), (do_open_directory):
	added password interrogation when necessary, using the standard
	gnome-vfs facilities.  Also, added some checks to avoid crashing
	with badly formed urls.
	
	* modules/default-modules.conf: